; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_exynos_adc.c_exynos_adc_disable_clk.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_exynos_adc.c_exynos_adc_disable_clk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.exynos_adc = type { i32, i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.exynos_adc*)* @exynos_adc_disable_clk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @exynos_adc_disable_clk(%struct.exynos_adc* %0) #0 {
  %2 = alloca %struct.exynos_adc*, align 8
  store %struct.exynos_adc* %0, %struct.exynos_adc** %2, align 8
  %3 = load %struct.exynos_adc*, %struct.exynos_adc** %2, align 8
  %4 = getelementptr inbounds %struct.exynos_adc, %struct.exynos_adc* %3, i32 0, i32 2
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = load %struct.exynos_adc*, %struct.exynos_adc** %2, align 8
  %11 = getelementptr inbounds %struct.exynos_adc, %struct.exynos_adc* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @clk_disable(i32 %12)
  br label %14

14:                                               ; preds = %9, %1
  %15 = load %struct.exynos_adc*, %struct.exynos_adc** %2, align 8
  %16 = getelementptr inbounds %struct.exynos_adc, %struct.exynos_adc* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = call i32 @clk_disable(i32 %17)
  ret void
}

declare dso_local i32 @clk_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
